Updated file entries for Odia for Bug: 681293, 710657, 727054 & 670405
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104698 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/or/download.lang
+++ b/or/download.lang
@@ -1,21 +1,21 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
+Mozilla Firefox, ମାଗଣାରେ ଉପଲବ୍ଧ ୱେବ ବ୍ରାଉଜର, ଯାହାକି ବିଶ୍ୱବ୍ୟାପି ଲାଭ-ପାଉନଥିବା ଅନୁଷ୍ଠାନ ଯିଏକି ସର୍ବସାଧାରଣ ସୁବିଧା ପାଇଁ ବ୍ୟକ୍ତି ବିଶେଷକୁ ୱେବର ଭବିଷ୍ୟତ ନିୟନ୍ତ୍ରଣ ଏବଂ ଆକାର ପ୍ରଦାନ କରିବା ପାଇଁ  ନିୟୋଜିତ କରି ନିଜକୁ ସମର୍ପିତ କରିଥାଏ।
 
 
 ;Different by Design
-Different by Design
+ରଚନା ଅନୁଯାୟୀ ଭିନ୍ନ
 
 
 ;Proudly <span>non-profit</span>
-Proudly <span>non-profit</span>
+ଗର୍ବର ସହିତ <span>ଲାଭ-କରୁନଥିବା</span>
 
 
 ;Innovating <span>for you</span>
-Innovating <span>for you</span>
+<span>ଆପଣଙ୍କ ପାଇଁ</span> ଆବିଷ୍କାର କରୁଅଛି
 
 
 ;Fast, flexible, <span>secure</span>
-Fast, flexible, <span>secure</span>
+ତୀବ୍ର, ସ୍ଥିତି ଅନୁରୂପୀ, <span>ସୁରକ୍ଷିତ</span>
 
 
 ;Thanks for choosing Firefox!
@@ -27,14 +27,14 @@ Firefox କୁ ପସନ୍ଦ କରିଥିବାରୁ ଧନ୍ୟବାଦ
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
+ଏକ ଲାଭ-କରୁନଥିବା ଅନୁଷ୍ଠାନ ହେତୁ, ଆମେ ଆପଣଙ୍କ ପାଇଁ ବାଧା ବିଘ୍ନ ବିନା ଆବିଷ୍କାର କରିବା ପାଇଁ ପ୍ରସ୍ତୁତ। ଏହି ଭିନ୍ନତାକୁ ଆପଣ ନିଶ୍ଚିତ ଭାବରେ ପସନ୍ଦ କରିବେ।
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Welcome to the only browser <em>that puts you first.</em>
+<em>ଆପଣଙ୍କୁ ଅଗ୍ରାଧିକାର ଦେଉଥିବା</em> କେବଳ ମାତ୍ର ବ୍ରାଉଜରରେ ଆପଣଙ୍କୁ ସ୍ୱାଗତ
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox ୱେବ ବ୍ରାଉଜର
 
 
