--- a/or/newsletter.lang
+++ b/or/newsletter.lang
@@ -46,23 +46,23 @@
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+Firefox ରୁ ଅଧିକ ଲାଭ ପାଇବା ପାଇଁ ଆମେ ଅତିଶିଘ୍ର ସୂଚନା  &amp; କୌଶଳ ଆଦାନ ପ୍ରଦାନ ଆରମ୍ଭ କରିବାକୁ  ଯାଉଛୁ, ଏବଂ ମଧ୍ଯ Mozilla ଏବଂ ଏକ ଉତ୍ତମ ୱେବ ନିର୍ମାଣ କରିବା ପାଇଁ ଆମେ କିପରି କାମ କରୁଛୁ ତାହା ବିଷୟରେ ନୂତନ ଖବର ପ୍ରକାଶ କରିବାକୁ ଯାଉଛୁ।
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+ମାସିକ ଅଦ୍ୟତନ ପାଇଁ ସଦସ୍ୟତା ଗ୍ରହଣ କରନ୍ତୁ ଏବଂ  Mozilla ଖବର ଜାଣନ୍ତୁ, Firefox ବ୍ରାଉଜରରୁ ଅଧିକ ଲାଭ ପାଇବା ପାଇଁ  ସୂଚନା ଏବଂ କୌଶଳକୁ ଅନ୍ତର୍ଭୁକ୍ତ କରି। ସମ୍ପର୍କ ଜାରି ରଖିବା ପାଇଁ ଏହା ହେଉଛି ଏକ ଉତ୍ତମ ଉପାୟ!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+ଆମେ ଆପଣଙ୍କୁ ଇମେଲ ଦ୍ୱାରାଏକ ନିଶ୍ଚିତକରଣ ସନ୍ଦେଶ ପଠାଇଛୁ। ଏହି ମେଲ ତାଲିକାରେ ଆପଣଙ୍କର ସଦସ୍ୟତାକୁ ବୈଧିକୃତ କରିବା ପାଇଁ ସେହି ମେଲରେ ନିଶ୍ଚିତକରଣ ସଂଯୋଗିକୀ ଉପରେ କ୍ଲିକ କରନ୍ତୁ।
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+ଏହା ବିଷୟରେ ସମସ୍ତ ତଥ୍ୟ ଆମର <span>ଖବର ପତ୍ରିକାରେ</span> ପଢ଼ନ୍ତୁ
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+ଆପଣଙ୍କର ଖବର ପତ୍ରିକା ସଦସ୍ୟତା ନିଶ୍ଚିତ କରାଯାଇଛି।
 
 
 ;Format
@@ -70,11 +70,11 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+ଆପଣ ସମ୍ପୂର୍ଣ୍ଣ ଭାବରେ ପ୍ରସ୍ତୁତ! <span>କିନ୍ତୁ ଅପେକ୍ଷକରନ୍ତୁ, ଏଠାରେ ଅନେକ କିଛି ଅଛି</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+ଅଧିକ ପ୍ରାସଙ୍ଗିକ ସୂଚନା ପାଇବାକୁ ଚାହୁଁଛନ୍ତି କି? ଆପଣଙ୍କ ବିଷୟରେ ଅଧିକ ତଥ୍ୟ ଜଣାନ୍ତୁ। ଏବଂ ଆପଣ ଯେତେବେଳେ ଏଠାରେ ଅଛନ୍ତି, ସେତେବେଳେ ଅନ୍ୟାନ୍ୟ Mozilla ଖବରଗୁଡ଼ିକ ପାଇଁ ନିଜକୁ ସାମିଲ କରନ୍ତୁ।
 
 
 ;Firefox & You
@@ -86,7 +86,7 @@ Firefox ଏବଂ ଆପଣ
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+ଆପଣଙ୍କ ମନପସନ୍ଦ ବ୍ରାଉଜର ପାଇଁ ନୂତନତମ ସୂଚନା ଏବଂ କୌଶଳ ପ୍ରାପ୍ତ କରନ୍ତୁ।
 
 
 ;Firefox Mobile
@@ -94,7 +94,7 @@ Firefox ମୋବାଇଲ
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+ସୁପ୍ରସିଦ୍ଧ ନୂତନ ଏଡ-ଅନ ଏବଂ Firefox ମୋବାଇଲରବିଶେଷତାଗୁଡ଼ିକ ବିଷୟରେ ଜ୍ଞାନ ଆହରଣ କରନ୍ତୁ।
 
 
 ;Beta News
@@ -102,15 +102,15 @@ Learn about the hottest new add-ons and features for Firefox mobile.
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Firefox ଡେସ୍କଟପ ଏବଂ ମୋବାଇଲ ପାଇଁ ଅନ୍ତିମ ପ୍ରକାଶନ ପୂର୍ବରୁ ନୂତନତମ ବିଶେଷତାକୁ ପଢ଼ନ୍ତୁ।
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+ଆସ ବନ୍ଧୁ ହେବା!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox ଆପଣଙ୍କ ମନପସନ୍ଦ ନେଟୱର୍କିଙ୍ଗ ସାଇଟରେ ମଧ୍ଯ ଅଛି। ଆମ ସହିତ ସମ୍ପର୍କ ସ୍ଥାପନ କରନ୍ତୁ ଏବଂ ବାର୍ତ୍ତାଳାପରେ ଅଂଶ ଗ୍ରହଣ କରନ୍ତୁ।
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
@@ -126,11 +126,11 @@ Firefox is also on your favorite social networking sites. Connect with us and jo
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+ଯଦି ଆପଣ ସମସ୍ତ Mozilla ଇମେଲଗୁଡ଼ିକରୁ ନିଜକୁ ବାହାର କରିବା ପାଇଁ ଚାହୁଁଛନ୍ତି ତେବେ ଏହାକୁ ବାଛନ୍ତୁ
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+ମୋତେ ସମସ୍ତ Mozilla ଇମେଲଗୁଡ଼ିକରୁ ବାହାର କରନ୍ତୁ
 
 
 ;Save Preferences
@@ -138,7 +138,7 @@ Remove me from all Mozilla emails
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+ଆପଣଙ୍କର ଇମେଲ ପସନ୍ଦକୁ ଅଦ୍ୟତନ କରିଥିବାରୁ ଧନ୍ୟବାଦ।
 
 
 ;You've been unsubscribed.
@@ -146,7 +146,7 @@ Thanks for updating your email preferences.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+ଆମେ ଆପଣଙ୍କୁ ଯାଉଥିବାର ଦେଖି ଦୁଖିଃତ। ଆପଣ କଣ ପାଇଁ ଛାଡ଼ି ଯାଉଛନ୍ତି ଦୟାକରି କହିବେକି?
 
 
 ;You send too many emails.
@@ -154,19 +154,19 @@ We’re sorry to see you go. Would you mind telling us why you’re leaving?
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+ଆପଣଙ୍କର ବିଷୟବସ୍ତୁ ମୋ ପାଇଁ ଉପଯୁକ୍ତ ନୁହଁ।
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+ଆପଣଙ୍କର ଇମେଲ ସଂରଚନା ପଢ଼ିବା ଅତ୍ୟନ୍ତ କଷ୍ଟକର।
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+ମୁଁ ଏହା ପାଇଁ ନିଜକୁ ସାମିଲ କରିନଥିଲି।
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+ଏହା ପରିବର୍ତ୍ତେ ମୁଁ Facebook ଏବଂ Twitter ରେ  Mozilla ସହିତ ଜଡ଼ିତ ଅଛି।
 
 
 ;Submit
@@ -174,6 +174,6 @@ I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+ଆପଣ ଜିବାର କାରଣ ଜଣାଇବା ପାଇଁ ଧନ୍ୟବାଦ।
 
 
