--- a/or/snippets.lang
+++ b/or/snippets.lang
@@ -2,126 +2,126 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now.</a>
+ଆପଣଙ୍କ ସହିତ Firefox କୁ ନେଇ ଚାଲନ୍ତୁ! ଏଣ୍ଡ୍ରଏଡ ପାଇଁ ନୂତନ Firefox କୁ ସତେଜ କରାଯାଇଛି ଏବଂ ଆପଣଙ୍କ ବ୍ୟବହାର ପାଇଁ ପ୍ରସ୍ତୁତ ଅଛି। <a href="%s">ବର୍ତ୍ତମାନ ଏହାକୁ ପ୍ରାପ୍ତ କରନ୍ତୁ।</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
+ବର୍ତ୍ତମାନ ଆପଣ ନୂତନତମ ସଂସ୍କରଣ ପାଇଛନ୍ତି, <a href="%s">ସମସ୍ତ ବିଶେଷତା ବିଷୟରେ ଜାଣନ୍ତୁ</a> ଯାହାକି ଆପଣ Firefox ରେ କରିପାରିବେ।
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
+ଆପଣଙ୍କ ପାଖରେ Firefox ର ନୂତନତମ ସଂସ୍କରଣ ନାହିଁ। ୱେବର ସଠିକ ଲାଭ ପାଇବା ପାଇଁ <a href="%s">ଆଜିହିଁ ଉନ୍ନୟନ କରନ୍ତୁ</a>!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Get the latest Firefox features first in <a href="%s">Aurora</a>.
+Firefox ର ନୂତନତମ ବିଶେଷତା ପ୍ରଥମେ <a href="%s">ଆରୋରା</a> ରୁ ପ୍ରାପ୍ତ କରନ୍ତୁ।
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
+Firefox ର ଭବିଷ୍ୟତ ବିଷୟରେ ସଂକ୍ଷିପ୍ତ ସୂଚନା ପ୍ରାପ୍ତ କରନ୍ତୁ। <a href="%s">Firefox ଆରୋରାକୁ ଆହରଣ କରନ୍ତୁ</a> ଏବଂ ନୂତନ ବିଶେଶତାଗୁଡ଼ିକୁ ପରୀକ୍ଷା କରନ୍ତୁ।
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
+Firefox ପୂର୍ବରୁ ବିଟା ଉପଲବ୍ଧ, ଏବଂ ବିଟା ପୂର୍ବରୁ ଆରୋରା ଉପଲବ୍ଧ। ନୂତନ ବିଶେଷତା ପାଇଁ <a href="%s">Firefox ଆରୋରାକୁ ବର୍ତ୍ତମାନ ବ୍ୟବହାର କରନ୍ତୁ</a>।
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">Firefox ସହିତ ସମ୍ପୃକ୍ତ ହୁଅନ୍ତୁ</a> ଏବଂ ସର୍ବସାଧାରଣ ସହିତ Firefox କୁ ପରିଚିତ କରାଇବା ପାଇଁ ସମସ୍ତ ସହାୟତାପ୍ରାପ୍ତ କରନ୍ତୁ!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+Firefox ଏକ ଲାଭ-କରୁନଥିବା ଅନୁଷ୍ଠାନ ଭାବରେ ଗର୍ବିତ ଏବଂ ଆପଣଙ୍କ ପାଇଁ ଆବିଷ୍କାର କରିବା ପାଇଁ ସଦାପ୍ରସ୍ତୁତ। ଆମ ଅଭିଜାନ ବିଷୟରେ <a href="%s">ଅଧିକ ଜ୍ଞାନ ଆହରଣ କରନ୍ତୁ</a>।
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+ତୀବ୍ର, ସ୍ଥିତି ଅନୁରୂପି ଏବଂ ସୁରକ୍ଷିତ, Firefox ହେଉଛି କେବଳ ମାତ୍ର ବ୍ରାଉଜର ଯିଏକି ଆପଣଙ୍କୁ ସ୍ଥାନରେ ରଖିଥାଏ। ରଚନା ଅନୁଯାୟୀ ଆମେ କିପରି ଭିନ୍ନ <a href="%s">ତାହା ଜାଣନ୍ତୁ</a>।
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">ଆପଣଙ୍କ ଏଣ୍ଡ୍ରଏଡ ଟ୍ୟାବଲେଟ ଉପରେ Firefox କୁ ଆହରଣ କରନ୍ତୁ</a> ଏବଂ ୱେବ ଶକ୍ତିକୁ ନିଜ ହାତମୁଠାରେ ପାଆନ୍ତୁ। ଏହାକୁ ବର୍ତ୍ତମାନ ପ୍ରାପ୍ତ କରନ୍ତୁ।
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+ଆପଣଙ୍କର ପ୍ଲଗଇନକୁ ଅଦ୍ୟତିତ ରଖନ୍ତୁ ଏବଂ <a href="%s">ପ୍ଲଗଇନ ଯାଞ୍ଚ</a> ସହିତ ଅନଲାଇନରେ ସୁରକ୍ଷିତ ରୁହନ୍ତୁ ।
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+ଆପଣଙ୍କ Firefox କୁ ଶୈଳୀରେ ରଖନ୍ତୁ। ଏହାକୁ ନୂତନତମ <a href="%s">ଛବି</a> ପ୍ରଦାନ କରନ୍ତୁ।
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+ଅତ୍ୟଧିକ ଟ୍ୟାବ? ଆପଣଙ୍କ ବ୍ରାଉଜରକୁ କ୍ଲଟରରୁ <a href="%s">ଚିତ୍ରବଳୀ</a> ସହିତ ପୁଣି ଦାବି କରନ୍ତୁ।
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+କୌଣସି ଦୁଇଜଣ Firefox ଚାଳକ ସମାନ ପ୍ରକାରର ନୁହଁନ୍ତି। <a href="%s">ଆପମଙ୍କ ବ୍ରାଉଜରରେ କୌଣସି ବଟନ ଯୋଡନ୍ତୁ</a> ଅଥବା ଆପଣ ବ୍ୟବହାର କରୁନଥିବା ବଟନକୁ ବାହାର କରନ୍ତୁ। ମୂଳ ସ୍ଥାନ ଉପରେ ଡାହାଣ କ୍ଲିକ କରନ୍ତୁ ଏବଂ ଇଚ୍ଛାରୂପଣ କରନ୍ତୁକୁ ବାଛନ୍ତୁ।
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+ଆପଣଙ୍କ Firefox କୁ ନୂତନ ଛବି ପ୍ରଦାନ କରନ୍ତୁ। ଚେଷ୍ଟା କରିବା ପାଇଁ ବୁଲାନ୍ତୁ, ପ୍ରୟୋଗ କରିବା ପାଇଁ କ୍ଲିକ କରନ୍ତୁ। ଅଥବା ଅଧିକ ହଜାର ହଜାର  ଛବି ପାଇଁ <a href="%s">ଗ୍ୟାଲେରୀ</a> କୁ ପରିଦର୍ଶନ କରନ୍ତୁ!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+ନୂତନ ବିଶେଷତାକୁ ପ୍ରଥମେ ଦେଖନ୍ତୁ, ସେଗୁଡ଼ିକ ବିଟାକୁ ଯିବା ପୂର୍ବରୁ ମଧ୍ଯ। <a href="%s">Firefox ଆରୋରା ଆହରଣ କରନ୍ତୁ।</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+ବିଶେଷତାଗୁଡ଼ିକୁ ପରୀକ୍ଷା କରିବା ପାଇଁ ଏବଂ ବିଟା ପ୍ରସ୍ତୁତି ନିର୍ଦ୍ଧାରଣ କରିବାରେ ସହାୟତା କରିବା ପାଇଁ <a href="%s">Firefox ଆରୋରା ଆହରଣ କରନ୍ତୁ</a>।
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+ଯଥାଶୀଘ୍ର ଆସନ୍ତୁ ଏବଂ  Firefox ର ଭବିଷ୍ୟତ ନିର୍ମାଣରେ ସହାୟତା କରନ୍ତୁ। <a href="%s">Firefox ଆରୋରା ଆହରଣ କରନ୍ତୁ।</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+ଏଣ୍ଡ୍ରଏଡ ପାଇଁ Firefox ବର୍ତ୍ତମାନ ଟ୍ୟାବଲେଟଗୁଡ଼ିକରେ ବ୍ରାଉଜ କରିବା ପାଇଁ ଉଦ୍ଦିଷ୍ଟ। <a href="%s">ୱେବର ସୁବିଧାକୁ ଆପଣଙ୍କ ହାତ ମୁଠାରେ ପ୍ରାପ୍ତ କରନ୍ତୁ</a>।
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+ଆପଣଙ୍କ ଏଣ୍ଡ୍ରଏଡ ଟ୍ୟାବଲେଟରେ Firefox ଆହରଣ କରନ୍ତୁ ଏବଂ ୱେବ ଶକ୍ତିକୁ ଆପଣଙ୍କ ହାତ ମୁଠାକୁ ଆଣନ୍ତୁ। <a href="%s">ବର୍ତ୍ତମାନ ଏହାକୁ ପ୍ରାପ୍ତ କରନ୍ତୁ</a>।
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox ବିଟା ଆହରଣ କରନ୍ତୁ</a>, ମତାମତ ପ୍ରଦାନ କରନ୍ତୁ ଏବଂ ପରବର୍ତ୍ତୀ Firefox କୁ 450 ମିଲିଅନ ଚାଳକ ପାଇଁ ଅଧିକ ସୁନ୍ଦର କରନ୍ତୁ।
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+ବିଶେଷତାଗୁଡ଼ିକୁ ପରୀକ୍ଷା କରନ୍ତୁ, ସୁଧାରନ୍ତୁ ଏବଂ ଚମକାନ୍ତୁ ଏବଂ ଆମର ପରବର୍ତ୍ତୀ ସଂସ୍କରଣକୁ ଆଗ ଅପେକ୍ଷା ଭଲ କରନ୍ତୁ। <a href="%">Firefox ବିଟାକୁ ଆଜି ଆହରଣ କରନ୍ତୁ!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Firefox କୁ ପସନ୍ଦ କରନ୍ତି କି? ଆମର ପରବର୍ତ୍ତୀ ସଂସ୍କରଣକୁ ଅଧିକ ଉତ୍ତମ କରିବାରେ ସହାୟତା କରିବାକୁ ଚାହୁଁଛନ୍ତି କି? <a href="%">Firefox ବିଟା ଆହରଣ କରନ୍ତୁ</a> ଏବଂ ଆମକୁ ଆଜି ମତାମତ ଦିଅନ୍ତୁ!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+ଆପଣ ନୂତନ Firefox ବିଟା ବ୍ୟବହାର କରୁଛନ୍ତି କି? <a href="%">ବର୍ତ୍ତମାନ ଏହାକୁ ଗ୍ରହଣ କରନ୍ତୁ</a> ଏବଂ ନୂତନ ବିଶେଷତାଗୁଡ଼ିକୁ ପରୀକ୍ଷା କରିବାରେ ସହାୟତା କରନ୍ତୁ।
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+ନୂତନ Firefox ବିଟାରେ ନାହିଁ? ଆମର ପରବର୍ତ୍ତୀ ସଂସ୍କରଣରେ କଣ କରୁଛୁ ତାହା ପୂର୍ବରୁ ଜାଣିବା ପାଇଁ <a href="%">ଆଜି ହିଁ ଆଣନ୍ତୁ</a>।
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+ଆପଣଙ୍କର ମତାମତ ଜଣାନ୍ତୁ? Firefox ର ପରବର୍ତ୍ତୀ ସଂସ୍କରଣକୁ ଅଧିକ ସୁନ୍ଦର କରିବାରେ ସହାୟତା କରିବା ପାଇଁ<a href="%">ତାହା କିପରି କରିବେ ଜାଣନ୍ତୁ</a> ଏବଂ ସହାୟତା କରନ୍ତୁ।
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox ବିଟା ଚାଳକମାନେ: ଆମକୁ ପରବର୍ତ୍ତୀ ସଂସ୍କରଣରେ ଅନ୍ତିମ ସୁଧାର ଆଣିବାକୁ <a href="%">ମତାମତ ପ୍ରଦାନ କରିବା ପାଇଁ</a> ଭୁଲନ୍ତୁ ନାହିଁ ।
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Firefox ର ପରବର୍ତ୍ତୀ ସଂସ୍କରଣକୁ ଅଧିକ ସୁନ୍ଦର କରିବାକୁ ସହାୟତା କରନ୍ତୁ। <a href="%">ସଦସ୍ୟତା ଗ୍ରହଣ କରନ୍ତୁ</a> ଏବଂ ଆପଣଙ୍କ ସାଙ୍ଗ ସାଥୀ ମାନଙ୍କୁ  Firefox ବିଟା ବିଷୟରେ ଜଣାନ୍ତୁ।
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+ଆଗାମୀ Firefox ବିଶେଷତାଗୁଡ଼ିକୁ ଦେଖିବା ପାଇଁ ସାଙ୍ଗମାନଙ୍କୁ ଆମନ୍ତ୍ରଣ କରନ୍ତୁ। <a href="%">ସଦସ୍ୟତା ଗ୍ରହଣ କରନ୍ତୁ</a> ଏବଂ ଆଜି Firefox ଆରୋରାକୁ ପ୍ରଚାର କରନ୍ତୁ।
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Firefox କୁ ଅନେକ କମ୍ପୁଟରରେ ବ୍ୟବହାର କରୁଛନ୍ତି କି? ବର୍ତ୍ତମାନ ଆପଣ ନିଜର ଏଡ-ଅନଡ଼ିକୁ ସେମାନଙ୍କ ମଧ୍ଯରେ ସନ୍ତୁଳନ କରିପାରିବେ। <a href="%">ସନ୍ତୁଳନକୁ କିପରି ସକ୍ରିୟ କରିବେ ତାହା ଖୋଜନ୍ତୁ।</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+ତୀବ୍ର, ତୀବ୍ର, ତୀବ୍ର। <a %s>ଏଣ୍ଡ୍ରଏଡ ପାଇଁ Firefox ଏକ ବଡ଼ ଉନ୍ନୟନ ପାଇଛି</a>। ଏହାକୁ ପ୍ରଚାର କରିବାରେ ସହାୟତା କରନ୍ତୁ।
 
 
