translated download.lang and download.lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104703 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kn/download.lang
+++ b/kn/download.lang
@@ -1,21 +1,21 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
+ಉಚಿತ ಜಾಲ ವೀಕ್ಷಕವಾದಂತಹ ಮೋಝಿಲ್ಲಾ ಫೈರ್ಫಾಕ್ಸ್ ಅನ್ನು, ಪ್ರತಿಯೊಬ್ಬ ವ್ಯಕ್ತಿಯೂ ಸಹ ಸಮಾಜದ ಒಳಿತಿಗಾಗಿ ಜಾಲದ ಭವಿಷ್ಯವನ್ನು ನಿಯಂತ್ರಿಸಲು ಮತ್ತು ರೂಪಿಸಲು ಮುಡಿಪಾದಂತಹ, ಜಾಗತಿಕ ಲಾಭದ ಉದ್ಧೇಶವಿರದ ಸಂಸ್ಥೆಯಿಂದ ನಿರ್ಮಿಸಲ್ಪಟ್ಟಿದೆ.
 
 
 ;Different by Design
-Different by Design
+ವಿನ್ಯಾಸದಲ್ಲಿ ವಿಭಿನ್ನತೆ
 
 
 ;Proudly <span>non-profit</span>
-Proudly <span>non-profit</span>
+<span>ಲಾಭದ ಉದ್ಧೇಶವಿಲ್ಲ</span> ಎನ್ನುವ ಹೆಮ್ಮೆ
 
 
 ;Innovating <span>for you</span>
-Innovating <span>for you</span>
+ನಿಮಗಾಗಿ <span>ನವೀನತೆ</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Fast, flexible, <span>secure</span>
+ವೇಗೆ, ಸುಲಭ ಹೊಂದಿಕೆ, <span>ಸುರಕ್ಷಿತ</span>
 
 
 ;Thanks for choosing Firefox!
@@ -27,14 +27,14 @@ Fast, flexible, <span>secure</span>
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
+ಲಾಭದ ಉದ್ಧೇಶವನ್ನು ಹೊಂದಿರದ ನಾವು ಯಾವುದೆ ಹೊಂದಾಣಿಕೆ ಮಾಡಿಕೊಳ್ಳದೆ ನಿಮ್ಮ ಪರವಾಗಿ ನವೀನತೆಯನ್ನು ಒದಗಿಸಲು ಮುಕ್ತವಾಗಿದ್ದೇವೆ. ನೀವು ವ್ಯತ್ಯಾಸವನ್ನು ಖಂಡಿತಾ ಇಷ್ಟಪಡುತ್ತೀರಿ.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Welcome to the only browser <em>that puts you first.</em>
+<em>ನಿಮ್ಮನ್ನು ಮುಂಚೂಣಿಯಲ್ಲಿರಿಸುವ</em> ಏಕೈಕ ಜಾಲವೀಕ್ಷಕಕ್ಕೆ ಸ್ವಾಗತ.
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+ಮೋಝಿಲ್ಲಾ ಫೈರ್ಫಾಕ್ಸ್ ಜಾಲ ವೀಕ್ಷಕ
 
 
