[it] translated missing snippet
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104748 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -122,6 +122,6 @@ Utilizzi Firefox su diversi computer? Ora puoi sincronizzare anche i componenti 
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Veloce, veloce, veloce. <a %s>È disponibile una versione profondamente rinnovata di Firefox per Android </a>. Aiutaci a diffondere la notizia.
 
 
