update to updatedialog
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104749 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/upgradedialog.lang
+++ b/es-AR/upgradedialog.lang
@@ -43,7 +43,7 @@ disfrutá de mayor personalización
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Dentro de poco tu versión de Firefox estará vulnerable a ataques online.
 
 
 ;Stay safe online
