l10n: te, translation updates by Krishna Babu K
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104754 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/te/newsletter.lang
+++ b/te/newsletter.lang
@@ -50,130 +50,129 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+నెలవారీ నవీకరణలకు సబ్‌స్క్రైబై తాజా మొజిల్లా వార్తలు పొందండి, సరికొత్త చిట్కాలు మరియు మెళుకువల గురించి తెలుసుకొనుట ద్వారా మీ ఫైర్‌ఫాక్స్ విహారిణి గురించి మరింత తెలుసుకొనండి. మాకు చేరువలో వుండుటకు యిది మంచి మార్గం!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-
+మేము యిప్పుడే మీ ఈమెయిల్‌కు వొక నిర్థారణ సందేశం పంపాము. ఈ మెయిలింగ్ జాబితానకు మీ సబ్‌స్క్రిప్షన్‌ను నిర్ధారించుటకు ఆ ఈమెయిల్ నందలి నిర్థారణ లంకెపై నొక్కుము.
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+దీని గురించి అంతా మా <span>వార్తాప్రతి</span> నందు చదవండి
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+మీ వార్తాప్రతి సబ్‌స్క్రిప్షన్ నిర్థారించబడింది.
 
 
 ;Format
-Format
+ఫార్మాట్
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+అంతా అమర్చుకున్నారు! <span>ఆగండి, యింకా వున్నాయి</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+మరింతగా సరిపోలు సమాచారం పొందాలనుకొంటున్నారా? మీగురించి మాకు యింకా కొంత చెప్పండి. మీరు యిక్కడ వున్నప్పుడు, యితర మొజిల్లా వార్తలకు సైనప్ కండి.
 
 
 ;Firefox & You
-Firefox & You
+ఫైర్‌ఫాక్స్ & మీరు
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+మా యితర వార్తాప్రతులు:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+సరికొత్త చిట్కాలు మరియు మెళుకువల గురించి తెలుసుకొనుట ద్వారా మీ అభీష్ట విహారిణి గురించి మరింత తెలుసుకొనండి
 
 
 ;Firefox Mobile
-Firefox Mobile
+ఫైర్‌ఫాక్స్ మొబైల్
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+ఫైర్‌ఫాక్స్ మొబైల్ కొరకు సరికొత్త పొడిగింతలు మరియు విశేషణాల గురించి తెలుసుకోండి.
 
 
 ;Beta News
-Beta News
+బీటా వార్తలు
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+అంతిమ విడుదలకు ముందుగా ఫైర్‌ఫాక్స్ డెస్కుటాప్ మరియు మొబైల్ గురించిన సరికొత్త విశేషణాలు చదవండి.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+మిత్రులుగా వుందాం రండి!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+ఫైర్‌ఫాక్స్ మీ అభీష్ట సోషల్ నెట్వర్కింగ్ సైట్ల పైనకూడా వుంది. మాతో కలిసి చర్చలో పాల్గొనండి.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+మీ <span>వార్తాప్రతి సబ్‌స్క్రిప్షన్లు</span> నిర్వహించండి.
 
 
 ;Subscribe
-Subscribe
+సబ్‌స్క్రైబ్
 
 
 ;Unsubscribe
-Unsubscribe
+అన్‌సబ్‌స్క్రైబ్
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+అన్ని మొజిల్లా ఈమెయిళ్ళ నుండి తీసివేయాలంటే యిక్కడ చెక్ చేయండి.
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+నన్ను అన్ని మొజిల్లా ఈమెయిళ్ళ నుండి తీసివేయండి
 
 
 ;Save Preferences
-Save Preferences
+అభీష్టాలను దాయి
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+మీ ఈమెయిల్ అభీష్టాలను నవీకరించినందుకు ధన్యవాదములు.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+మీరు అన్‌సబ్‌స్క్రైబ్ అయినారు.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+మీరు విడిచి వెళుతున్నందుకు భాదగా వుంది, మీరు యేమీ అనుకోకపోతే యెందుకు విడిచి వెళుతున్నారో మాకు చెప్పగలరా?
 
 
 ;You send too many emails.
-You send too many emails.
+మీరు చాలా ఈమెయిల్స్ పంపారు.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+మీ విషయం(కాంటెంట్) నాకు సంభందించినదిగా లేదు.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+మీ ఈమెయిల్ రూపు చదువుటకు చాలా కష్టంగా వుంది.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+దీని కొరకు నేను సైనప్ కాలేదు.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+బదులుగా నేను ఫేస్‌బుక్ మరియు ట్విట్టర్ నందు మొజిల్లాతో చేరువలో వుంటాను.
 
 
 ;Submit
-Submit
+అప్పజెప్పు
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+మీరు యెందుకు విడిచి వెళుతున్నారో మాకు చెప్పినందులకు ధన్యవాదములు.
 
 
