--- a/hi-IN/download.lang
+++ b/hi-IN/download.lang
@@ -1,21 +1,21 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
+मोज़िल्ला फ़ायरफ़ॉक्स, निःशुल्क वेब ब्राउज़र, एक वैश्विक गैर लाभकारी संस्था द्वारा तैयार किया गया है जो सर्वजनहिताय वेब के भविष्य को लोगों के नियंत्रण और पसंद के अनुसार रखने के लिए प्रतिबद्ध है.
 
 
 ;Different by Design
-Different by Design
+कमाल का डिजायन
 
 
 ;Proudly <span>non-profit</span>
-Proudly <span>non-profit</span>
+हमें गर्व है कि हम <span>गैर-लाभकारी</span> संस्था हैं
 
 
 ;Innovating <span>for you</span>
-Innovating <span>for you</span>
+नवाचार <span>आपके लिए</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Fast, flexible, <span>secure</span>
+तेज, लचीला, <span>सुरक्षित</span>
 
 
 ;Thanks for choosing Firefox!
@@ -27,14 +27,14 @@ Fast, flexible, <span>secure</span>
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
+बतौर एक गैर-लाभकारी संस्था हम आपके बदले बिना किसी समझौते के नवाचार के लिए स्वतंत्र हैं. आपको यह अंतर वाकई पसंद आनेवाला है.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Welcome to the only browser <em>that puts you first.</em>
+एकमात्र ऐसे ब्राउज़र में आपका स्वागत है जो <em>आपको सबसे पहले रखता है.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+मोज़िल्ला फ़ायरफ़ॉक्स वेब ब्राउज़र
 
 
