updating main.lang done by Sunil Jayaprakash file: Bug 730544
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104758 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kn/main.lang
+++ b/kn/main.lang
@@ -287,8 +287,7 @@ MPEG-4 ವಿನ್ಯಾಸ
 
 
 ;Journey to the Future with Firefox
-
-
+ಫೈರ್ಫಾಕ್ಸಿನೊಂದಿಗೆ  ಮುಂದಿನ ಯಾನವನ್ನು  ಸವಿಯಿರಿ
 
 ;Join the Beta Program
 ಬೀಟಾ ಪ್ರೊಗ್ರಾಮ್‌ನಲ್ಲಿ ಭಾಗಿಯಾಗಿ
@@ -307,7 +306,7 @@ MPEG-4 ವಿನ್ಯಾಸ
 
 
 ;Try Firefox with a fresh look and feel.
-ತಾಜಾ ನೋಟ ಹಾಗು ಮಾಟದ ಫೈರ್ಫಾಕ್ಸನ್ನು ಪ್ರಯತ್ನಿಸಿ ನೋಡಿ.
+ತಾಜಾ ನೋಟ ಹಾಗು  ಅನುಭವದ ಫೈರ್ಫಾಕ್ಸನ್ನು ಪ್ರಯತ್ನಿಸಿ ನೋಡಿ.
 
 
 ;Experience tomorrow's Web today.
@@ -331,74 +330,70 @@ MPEG-4 ವಿನ್ಯಾಸ
 
 
 ;All Systems & Languages
-All Systems & Languages
+ಎಲ್ಲ ಕಾರ್ಯಾಚರಣ ವ್ಯವಸ್ಥೆಗಳು ಮತ್ತು ನುಡಿಗಳು
 
 
 ;View Full Site
-View Full Site
+ಪೂರ್ಣ ತಾಣ ವೀಕ್ಷಿಸಿ
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+ಆಂಡ್ರಾಯ್ಡಿಗೆ ಫೈರ್ಫಾಕ್ಸನ್ನು  ಪಡೆಯಿರಿ
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+<span>ಆಂಡ್ರಾಯ್ಡಿಗಾಗಿ</span> ಡೌನ್ಲೋಡ್ ಮಾಡಿ
 
 
 ;Free from the Android Market
-Free from the Android Market
+ಆಂಡ್ರಾಯ್ಡ್ ಮಾರುಕಟ್ಟೆಯಿಂದ ಉಚಿತ
 
 
 ;Desktop
-Desktop
+ಗಣಕಪರದೆ
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+ಮೊಬೈಲುಗಳಿಗೆ ಫೈರ್ಫಾಕ್ಸ್ ಬೀಟಾ
 
 
 ;Firefox for mobile
-Firefox for mobile
+ಮೊಬೈಲುಗಳಿಗೆ ಫೈರ್ಫಾಕ್ಸ್
 
 
 ;Email
-Email
+ಮಿಂಚೆ
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
-
+ಮೊಝಿಲ್ಲಾ ಫೈರ್ಫಾಕ್ಸ್.  XP ಗಾಗಿ ಆಧುನಿಕ ಅಂತರಜಾಲವನ್ನು ಸಾಧ್ಯವಾಗುಸುತ್ತಾ.
 
 ;Super speed
-Super speed
+ತ್ವರಿತ ವೇಗ
 
 
 ;Stunning graphics
-Stunning graphics
+ಅತ್ಯಾಕರ್ಶಕ ಗ್ರಾಫಿಕ್ಸ್
 
 
 ;The latest technologies
-The latest technologies
+ಇತ್ತೀಚಿನ ತಾಂತ್ರಿಕತೆ
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+ನೀವು ಫೈರ್ಫಾಕ್ಸಿನ ಹಳೆಯ ಆವೃತ್ತಿಯನ್ನು ಬಳಸುತ್ತಿದ್ದೀರಿ.. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+ನವೀಕರಣದ ಅಗತ್ಯವಿದೆ!. ಕ್ಷಣಮಾತ್ರದಲ್ಲಿ  ಸುರಕ್ಷಿತ ವ್ಯವಸ್ಥೆಯನ್ನು ಸಜ್ಜುಗೊಳಿಸಿ. <br/> ಸುಸಜ್ಜಿತ ಬ್ರೌಸಿಂಗ್ ಅನುಭವಕ್ಕಾಗಿ ಹೊಸ ಫೈರ್ಫಾಕ್ಸ ಬಳಸಲು ಆರಂಭಿಸಿ. <br/>   ಇದು  ಉಚಿತ ಮತ್ತು ವೇಗ!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+ಫೈರ್ಫಾಕ್ಸಿನ ಹಳೆಯ ಆವೃತ್ತಿಯನ್ನು ಬಳಸುತ್ತಿದ್ದೀರಿ. ಸುರಕ್ಷಿತ ವ್ಯವಸ್ಥೆಗಾಗಿ Get <a href="%s">ನಿಮ್ಮ ಅಪಡೇಟುಗಳನ್ನು</a> ಪಡೆಯಿರಿ! <br/> ಅತ್ಯಂತ ವೇಗದ, ಸುಸಜ್ಜಿತ ಮತ್ತು ಸುರಕ್ಷಿತ ವ್ಯವಸ್ಥೆಯ ಅನುಭವ ಪಡೆಯಿರಿ. ಕ್ಷಣಮಾತ್ರದಲ್ಲಿ ಉಚಿತ ನವೀಕರಣಗಳನ್ನು ಅನುಸ್ಥಾಪಿಸಿ.
 
 
 ;Upgrade now
-Upgrade now
-
+ಈಗಲೇ ನವೀಕರಿಸಿ
 
 ;Update now
-Update now
-
-
+ಈಗಲೇ ಅಪ್ಡೇಟ್ ಮಾಡಿ
