--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -119,4 +119,4 @@ A' cleachdadh Firefox air iomadh coimpiutair? 'S urrainn dhut na tuilleadain aga
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Luath, luath, luath. <a %s>Tha Firefox airson Android dìreach air àrdachadh mòr fhaighinn</a>. Nach sgaoil thu an naidheachd?
