--- a/gd/upgradedialog.lang
+++ b/gd/upgradedialog.lang
@@ -27,7 +27,7 @@ Tha tionndadh nas ùire de Firefox ann a dhìonas tu nas fhearr o ionnsaighean a
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Get the upgrade</a> — it’s fast & free! {ok}
+<a %s>Faigh greim air an àrdachadh</a> — tha e luath ┐ saor an-asgaidh!
 
 
 ;get the latest in security
@@ -87,4 +87,4 @@ Stàilich àrdachadh saor an-asgaidh airson <a %s>an t-siostam-obrachaidh</a> ag
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Faighnichidh sin dhìot aon turas eile mus dèid d' àrdachadh gu fèin-obrachail.
