Update to 100% for .lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104760 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/main.lang
+++ b/ff/main.lang
@@ -3,7 +3,7 @@ Banngagol
 
 
 ;Press area
-Nokku Jaaynde
+Nokku jaaynde
 
 
 ;About
@@ -43,7 +43,7 @@ Mbayla
 
 
 ;skip to Navigation
-diw to banngagol
+diw to Peeragol
 
 
 ;switch language
@@ -143,7 +143,7 @@ Uddu
 
 
 ;(in English)
-(E ɗemngal Pulaar Fulfulde)
+(e ɗemngal Pulaar Fulfulde)
 
 
 ;Download Now - Free
@@ -159,7 +159,7 @@ Aɗa foti <a href="http://get.adobe.com/flashplayer/">hesɗitinde Adobe Flash Pl
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox ena hesɗiti, kono yamre Flash Player nde njogi-ɗaa ndee ena waawi addude caɗe kisal e jamɗugol. Tiiɗndo <a href="http://get.adobe.com/flashplayer/">loow kesɗitinal ngal yoɓetaake</a> ko yaajtii.
+Firefox ena hesɗiti, kono yamre Flash Player nde njogi-ɗaa ndee ena waawi addude caɗe kisal e jamɗugol.  Tiiɗndo <a href="http://get.adobe.com/flashplayer/">loow kesɗitinal ngal yoɓetaake</a> ko yaajtii.
 
 
 ;Features
@@ -375,7 +375,7 @@ Njaaweeki moolanaaki
 
 
 ;Stunning graphics
-Jaytine Kulɓiniiɗe
+Jaytine kulɓiniiɗe
 
 
 ;The latest technologies
@@ -383,7 +383,7 @@ Karallaagal cakkitiingal
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-Ngon-ɗaa ko e huutoraade yamre Firefox ɓooynde. Heɓ kesɗitinal ngam ɓeudude kisal!  <br/> <a href="%s">Aawto kesɗitinal (yoɓetaake)</a> e ko jaasi hojom ngam heɓde fannuuji kesi, peewnitte njaaweeki e kisal.
+Ngon-ɗaa ko e huutoraade yamre Firefox ɓooynde. Heɓ kesɗitinal ngam ɓeudude kisal! <br/> <a href="%s">Aawto kesɗitinal dokkal</a> e ko jaasi hojom ngam heɓde fannuuji kesi, peewnitte njaaweeki e kisal.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
