--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -119,4 +119,4 @@ Aɗa huutoroo Firefox e ordianteeruuji keewɗi? Jooni aɗa waawi sanngoɗinde ɓ
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Njaawee, njaawee, njaawee. <a %s>Firefox mo Android heɓii kesɗitinal mawngal</a>. Wallu min saaktude kabaaru oo.
