--- a/ff/upgradedialog.lang
+++ b/ff/upgradedialog.lang
@@ -27,7 +27,7 @@ Ena woodi yamre hesere Firefox ɓurnde waawde hisnude-ma e njanguuji ceŋol.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Get the upgrade</a> — it’s fast & free! {ok}
+<a %s>Heɓ kesɗitinal ngal</a> — jaawɗum & ko dokkal!
 
 
 ;get the latest in security
@@ -87,4 +87,4 @@ Loowde kesɗitinal <a %s>yuɓɓo huumnungo</a> maa
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Maa a siiftine laawol goɗngol hade maa hesɗitineede e jaagol.
