added one missing entry and also translated one existing entry
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104782 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kn/main.lang
+++ b/kn/main.lang
@@ -381,7 +381,7 @@ MPEG-4 ವಿನ್ಯಾಸ
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-ನೀವು ಫೈರ್ಫಾಕ್ಸಿನ ಹಳೆಯ ಆವೃತ್ತಿಯನ್ನು ಬಳಸುತ್ತಿದ್ದೀರಿ.. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+ನೀವು ಫೈರ್ಫಾಕ್ಸಿನ ಹಳೆಯ ಆವೃತ್ತಿಯನ್ನು ಬಳಸುತ್ತಿದ್ದೀರಿ. ಸುರಕ್ಷಿತವಾಗಿರಲು ನಿಮ್ಮ ಅಪ್‌ಡೇಟ್ ಅನ್ನು ಪಡೆದುಕೊಳ್ಳಿ! ಇತ್ತೀಚಿನ ಸವಲತ್ತುಗಳು, ವೇಗ ಮತ್ತು ಸುರಕ್ಷತಾ ಪರಿಹಾರಗಳೊಂದಿಗೆ ಒಂದು ನಿಮಿಷಕ್ಕೂ ಕಡಿಮೆ ಸಮಯದಲ್ಲಿ <br/> <a href="%s">ಉಚಿತ ನವೀಕರಣವನ್ನು ಪಡೆದುಕೊಳ್ಳಿ</a>.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
@@ -397,3 +397,6 @@ MPEG-4 ವಿನ್ಯಾಸ
 
 ;Update now
 ಈಗಲೇ ಅಪ್ಡೇಟ್ ಮಾಡಿ
+
+;Plugins
+ಪ್ಲಗ್‌ಇನ್‌ಗಳು
