l10n: vi, udpate a string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104788 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/vi/survey1.lang
+++ b/vi/survey1.lang
@@ -45,7 +45,7 @@ Nam
 Nữ
 
 
-;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
 Bạn dùng những trình duyệt nào (trên desktop cũng như laptop, ở nhà cũng như nơi làm việc)?
 
 
