translates one string into catalan (ca). bug 745589
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104807 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/mobile.lang
+++ b/ca/mobile.lang
@@ -2,63 +2,63 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Baixeu el Firefox per a l'Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Baixa per a l'<span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Gratuït a l'Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+O visiteu <a %s>Firefox.com/m</a> des del mòbil.
 
 
 ;Supported Devices
-Supported Devices
+Dispositius amb suport
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Baixeu-lo des de l'iTunes gratuïtament
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home per a l'<span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Accediu a l'historial, a les adreces d'interès i a les pestanyes obertes del Firefox amb l'iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Baixa el Firefox al <span>mòbil</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Voleu provar les darreres funcions?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Baixeu el Firefox Home per a l'iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Baixeu la Beta per a l'Android
 
 
 ;Download
-Download
+Baixa'l
 
 
 ;for
-for
+per
 
 
 ;Free from iTunes
-Free from iTunes
+Gratuït des de l'iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
