--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -87,6 +87,6 @@ Instal·lar una actualització gratuïta del <a %s>sistema operatiu</a>.
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Se us preguntarà això un cop més abans d'actualitzar-vos automàticament.
 
 
